[package]
name = "cbmix"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4"
directories = "5.0"
thiserror = "1.0"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.6", features = ["macros", "ws"] }
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.26", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

# [dependencies.ola]
# git = "https://github.com/jbellerb/libola-rs.git"
# features = ["tokio"]

[build-dependencies]
prost-build = "0.11"
