[package]
name = "cbmix"
version = "0.1.0"
edition = "2021"

[dependencies]
cbmix_admin_proto = { workspace = true }

axum = { workspace = true }
bytes = { workspace = true }
directories = { workspace = true }
ola = { workspace = true }
petgraph = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower =  { workspace = true }
tower-http =  { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
