[package]
name = "cbmix_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
cbmix_admin_proto = { workspace = true }
cbmix_common = { workspace = true }
cbmix_graph = { workspace = true }

axum = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower =  { workspace = true }
tower-http =  { workspace = true }
tracing = { workspace = true }
