[package]
name = "cbmix_dmx"
version = "0.1.0"
edition = "2021"

[dependencies]
cbmix_admin_proto = { workspace = true }
cbmix_common = { workspace = true }
cbmix_graph = { workspace = true }

ola = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
