[package]
name = "cbmix_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
cbmix_admin_proto = { workspace = true }
cbmix_common = { workspace = true }

ola = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
