[package]
name = "cbmix_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
cbmix_common = { workspace = true }

generational-arena = { workspace = true }
ola = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
